Css für überuns seite erweitert.

--- a/html/ueberuns.html
+++ b/html/ueberuns.html
@@ -14,166 +14,176 @@
 <body>
 
     <header>
-        <div class="headerIcons">
 
-            <div>
-                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIconSetting">
-                <img src="../Images/Icons/Home.png" alt="Home" class="headerIconHome">
+        <section class="toolbar">
+            <div class="toolbarLeft">
+                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons">
             </div>
-            <div>
-                <img src="../Images/Icons/Herz.png" alt="Like" class="headerIconLike">
-                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIconProfil">
+            <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons">
             </div>
-        </div>
-        <img src="../Images/Logo klein.png" alt="logo klein Bärnläbt" class="logoÜberuns">
+        </section>
+
+        <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
 
         <div class="menu-container">
-            <div class="button-container">
-                <a href="home.html" class="buttontest">Home</a>
-            </div>
-            <div class="button-container">
-                <a href="angebot.html" class="buttontest">Angebot</a>
-            </div>
-            <div class="button-container">
-                <a href="über uns.html" class="buttonActive2">Über uns</a>
-            </div>
-            <div class="button-container">
-                <a href="kontakt.html" class="buttontest">Kontakt</a>
-            </div>
+            <a href="home.html" class="button">Home</a>
+            <a href="angebot.html" class="button">Angebot</a>
+            <a href="ueberuns.html" class="button" id="buttonActive">Über uns</a>
+            <a href="kontakt.html" class="button">Kontakt</a>
         </div>
+
     </header>
+    <main>
+        <section>
+            <article class="salut">
+                <div class="teaserBoxLinks">
+                    <h2 class="teaserTextLinks">Salut</h2>
+                    <p class="teaserTextLinks">Du hast bereits viel von dir preisgegeben, daher möchten wir dir nun
+                        auch ein wenig von uns erzählen.
+                        Nur so ist das doch fair, oder?
+                    </p>
+                </div>
+                <div class="teaserBoxRechts">
+                    <p class="teaserTextRechts">Wir sind junge und lebhafte Menschen – so wie Du.
+                        Wir wissen genau, wie es sich anfühlt, in eine neue Stadt zu ziehen
+                        – womöglich genau wie Du.</p>
+                </div>
+                </div>
+            </article>
+        </section>
+
+        <section class="team">
+            <article class="containerPortrait">
+                <img src="../Images/ueberuns/Janic.png" alt="Portrait Janic" class="bildPortrait">
+                <div class="overlay">
+                    <div class="portraitText">
+                        <h2>Janic</h2>
+                        <p>Operations/ Kundendienst/ externe Kommunikation</p>
+                        <p>«Excel und PowerPoint Fanboy aber sonst eigentlich ganz okay.»</p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="containerPortrait">
+                <img src="../Images/ueberuns/Jazz.png" alt="Portrait Jazz" class="bildPortrait">
+                <div class="overlay">
+                    <div class="portraitText">
+                        <h2>Jazz</h2>
+                        <p>Personalunternehmen/ Interne Kommunikation</p>
+                        <p>«Ich wurde von zwei gegensätzlichen Kulturen geprägt: die australische Leidenschaft für Pubs
+                            und
+                            Vokuhilas; sowie die schweizerische Begeisterung für Struktur und Wandern. Bern bietet mir
+                            von
+                            allem etwas.»</p>
+                    </div>
+                </div>
+            </article>
+            <article class="containerPortrait">
+                <img src="../Images/ueberuns/Mali.png" alt="Portrait Mali" class="bildPortrait">
+                <div class="overlay">
+                    <div class="portraitText">
+                        <h2>Mali</h2>
+                        <p>Creative Direktorin/ Designerin/ Webdesignerin</p>
+                        <p>«Meine Geldbörse und ich haben eine komplizierte Beziehung - insbesondere wenn es um den Kauf
+                            von
+                            Konzertkarten und Kinotickets geht.»</p>
+                    </div>
+                </div>
+            </article>
+            <article class="containerPortrait">
+                <img src="../Images/ueberuns/Sigi.png" alt="Portrait Sigi" class="bildPortrait">
+                <div class="overlay">
+                    <div class="portraitText">
+                        <h2>Sigi</h2>
+                        <p>Content-Verfasser/ Manager public relations</p>
+                        <p>«Für gutes Essen, ein frisch gezapftes Bier und fätzige Live-Musik würde ich Berge versetzen
+                            -
+                            dieses Gefühl anderen Menschen zu vermitteln, ist meine grösste Freude.»</p>
+                    </div>
+                </div>
+            </article>
+            <article class="containerPortrait">
+                <img src="../Images/ueberuns/Zoé.png" alt="Portrait Zoé" class="bildPortrait">
+                <div class="overlay">
+                    <div class="portraitText">
+                        <h2>Zoé</h2>
+                        <p>Gesamtmanagement/ Finanz Chef</p>
+                        <p>«Gemeinsam Spass haben, aufregende Erlebnisse teilen, Aktivitäten unternehmen und dabei meine
+                            Leidenschaft für Planung und Organisation ausleben.»</p>
+                    </div>
+                </div>
+
+
+        </section>
+
+
+        <article class="textTeam">
+            <p>Wir sind Zoé, Janic, Jazz, Mali und Sigi. Bei BÄRNLÄBT sind alle verschieden und doch irgendwie
+                ähnlich.
+                Wir alle haben uns dazu entschieden, einen kuriosen Studiengang zu wählen, der irgendetwas mit
+                Medien zu tun hat. Warum? Weil wir der digitalen Welt einen kreativen Anstrich geben und gesunde
+                Kommunikation fördern möchten.</p>
+        </article>
+
 
         <section>
-            <article class="Salut">
-                <div class="horizontal">
-                    <div class="teaserBoxLinks">
-                        <h2 class="teaserTextLinks">Salut</h2>
-                        <p class="teaserTextLinks">Du hast bereits viel von dir preisgegeben, daher möchten wir dir nun
-                            auch ein wenig von uns erzählen.
-                            Nur so ist das doch fair, oder?
+            <article>
+                <h2>Werum säb Idee?</h2>
+                <div class="ideeTextBox">
+                    <p class="ideeTextSpalte">Unsere fünf Lebenswege haben sich ausgerechnet in Bern gekreuzt, weil wir
+                        alle denselben Gedanken
+                        hatten: Warum nicht in die- ser aufregenden Stadt studieren? «Bärnfäggt!»
+
+                        Darum sind wir alle euphoriegeladen in die Schweizer Hauptstadt gepilgert. Haben Freunde,
+                        Familie und Vereine hinter uns gelassen. Schnell also stellten wir fest, wie es sich ohne das
+                        gewohnte Umfeld anfühlt; allein in einer neuen Stadt.</p>
+                    <p class="ideeTextSpalte">Wie Du vielleicht schon bemerkt hast, ist es nicht mehr so einfach, neue
+                        Freunde kennenzulernen,
+                        wie es in Kinderjahren noch war. Und Du weisst sicherlich, dass es nicht halb so viel Spass
+                        macht, alleine an Kurse oder Veranstaltungen zu gehen. Dating-Plattformen sind für
+                        freundschaftliche Begegnungen nicht geeignet – da sind wir uns sicher einig. Aus diesem Grund
+                        gründeten wir unsere eigene Plattform, massgeschneidert für Bern und die Menschen, die hier
+                        wohnen.</p>
+                </div>
+            </article>
+            <article class="placeholder"></article>
+                <article>
+                    <div class="vision">
+                        <p>Unsere Vision ist es, die soziale Kultur in Bern zu stärken, in- dem wir Menschen
+                            zusammenführen und die Leidenschaft für gemeinsame Veranstaltungen entfachen.
                         </p>
+                            <p>Wieso?</p>
                     </div>
-            </article>
+                </article>
 
-            <article class="Salut">
-                <div class="horizontal">
-                    <div class="teaserBoxRechts">
-                        <p class="teaserTextRechts">Wir sind junge und lebhafte Menschen – so wie Du.
-                            Wir wissen genau, wie es sich anfühlt, in eine neue Stadt zu ziehen
-                            – womöglich genau wie Du.</p>
+                <article>
+                    <div>
+                        <h2>Wöus zäme meh fäggt!</h2>
                     </div>
-                </div>
-            </article>
-        </section>
+                </article>
+            </section>
 
-        <section>
-            <article>
-                <div class="containerPortrait">
-                    <img src="../Images/ueberuns/Janic.png" alt="Portrait Janic">
-                    <div class="overlay">
-                        <div class="portraitText">
-                    <h2>Janic</h2>
-                    <p>Operations/ Kundendienst/ externe Kommunikation</p>
-                    <p>«Excel und PowerPoint Fanboy aber sonst eigentlich ganz okay.»</p>
-                        </div>
+            <section>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hG9g4eGjbts?si=OhV_h_0a1QkQMNUw"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </section>
+
+            <section>
+                <article>
+                    <div>
+                        <p>Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein Feedback mitteilen?
+
+                            Dann nutze gerne unser Kontaktformular und wir werden uns so schnell wie möglich bei dir
+                            melden.
+
+                            Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine Kontaktaufnahme!</p>
                     </div>
-                </div>
-            </article>
-
-            <article>
-                <div>
-                    <img src="../Images/ueberuns/Jazz.png" alt="Portrait Jazz">
-                    <h2>Jazz</h2>
-                    <p>Personalunternehmen/ Interne Kommunikation</p>
-                    <p>«Ich wurde von zwei gegensätzlichen Kulturen geprägt: die australische Leidenschaft für Pubs und Vokuhilas; sowie die schweizerische Begeisterung für Struktur und Wandern. Bern bietet mir von allem etwas.»</p>
-                </div>
-            </article>
-
-            <article>
-                <div>
-                    <img src="../Images/ueberuns/Mali.png" alt="Portrait Mali">
-                    <h2>Mali</h2>
-                    <p>Creative Direktorin/ Designerin/ Webdesignerin</p>
-                    <p>«Meine Geldbörse und ich haben eine komplizierte Beziehung - insbesondere wenn es um den Kauf von Konzertkarten und Kinotickets geht.»</p>
-                </div>
-            </article>
-
-            <article>
-                <div>
-                    <img src="../Images/ueberuns/Sigi.png" alt="Portrait Sigi">
-                    <h2>Sigi</h2>
-                    <p>Content-Verfasser/ Manager public relations</p>
-                    <p>«Für gutes Essen, ein frisch gezapftes Bier und fätzige Live-Musik würde ich Berge versetzen - dieses Gefühl anderen Menschen zu vermitteln, ist meine grösste Freude.»</p>
-                </div>
-            </article>
-
-            <article>
-                <div>
-                    <img src="../Images/ueberuns/Zoé.png" alt="Portrait Zoé">
-                    <h2>Zoé</h2>
-                    <p>Gesamtmanagement/ Finanz Chef</p>
-                    <p>«Gemeinsam Spass haben, aufregende Erlebnisse teilen, Aktivitäten unternehmen und dabei meine Leidenschaft für Planung und Organisation ausleben.»</p>
-                </div>
-            </article>
-        </section>
-
-        <section>
-            <article>
-                <div>
-                    <p>Wir sind Zoé, Janic, Jazz, Mali und Sigi. Bei BÄRNLÄBT sind alle verschieden und doch irgendwie ähnlich. 
-                        Wir alle haben uns dazu entschieden, einen kuriosen Studiengang zu wählen, der irgendetwas mit Medien zu tun hat. Warum? Weil wir der digitalen Welt einen kreativen Anstrich geben und gesunde Kommunikation fördern möchten.</p>
-                </div>
-            </article>
-        </section>
-
-        <section>
-            <article>
-                <div>
-                    <h2>Werum säb Idee?</h2>
-                    <p>Unsere fünf Lebenswege haben sich   ausgerechnet in Bern gekreuzt, weil wir alle denselben Gedanken hatten: Warum nicht in die- ser aufregenden Stadt studieren? «Bärnfäggt!»
- 
-                        Darum sind wir alle euphoriegeladen in die Schweizer Hauptstadt gepilgert. Haben Freunde, Familie und Vereine hinter uns gelassen. Schnell also stellten wir fest, wie es sich ohne das gewohnte Umfeld anfühlt; allein in einer neuen Stadt.</p>
-                </div>
-            </article>
-
-            <article>
-                <div>
-                    <p>Wie Du vielleicht schon bemerkt hast, ist es nicht mehr so einfach, neue Freunde kennenzulernen, wie es in Kinderjahren noch war. Und Du weisst sicherlich, dass es nicht halb so viel Spass macht, alleine an Kurse oder Veranstaltungen zu gehen. Dating-Plattformen sind für freundschaftliche Begegnungen nicht geeignet – da sind wir uns sicher einig. Aus diesem Grund gründeten wir unsere eigene Plattform, massgeschneidert für Bern und die Menschen, die hier wohnen.</p>
-                </div>
-            </article>
-        </section>
-
-        <section>
-            <article>
-                <div>
-                    <p>Unsere Vision ist es, die soziale Kultur in Bern zu stärken, in- dem wir Menschen zusammenführen und die Leidenschaft für gemeinsame Veranstaltungen entfachen. 
-
-                        Wieso?</p>
-                </div>
-            </article>
-
-            <article>
-                <div>
-                    <h2>Wöus zäme meh fäggt!</h2>
-                </div>
-            </article>
-        </section>
-
-        <section>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/hG9g4eGjbts?si=OhV_h_0a1QkQMNUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </section>
-
-        <section>
-            <article>
-                <div>
-                    <p>Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein Feedback mitteilen? 
-
-                        Dann nutze gerne unser Kontaktformular und wir werden uns so schnell wie möglich bei dir melden.
-                        
-                        Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine Kontaktaufnahme!</p>
-                </div>
-            </article>
-        </section>
+                </article>
+            </section>
     </main>
 
     <footer>
