mafe th homepage responsive and am still working onmaking the header responsive as well.

--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -14,7 +14,6 @@
 <body>
 
     <header>
-
         <section class="toolbar">
             <div class="toolbarLeft">
                 <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
@@ -27,12 +26,12 @@
 
         <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
 
-        <div class="menu-container">
+        <section class="menu-container">
             <a href="home.html" class="button">Home</a>
             <a href="angebot.html" class="button" id="buttonActive">Angebot</a>
             <a href="ueberuns.html" class="button">Über uns</a>
             <a href="kontakt.html" class="button">Kontakt</a>
-        </div>
+        </section>
 
     </header>
     <main>
@@ -74,79 +73,39 @@
                 <p class="paragraphText">Wir helfen dir, die ideale Beglietung zu finden, damit du nicht alleine
                     losziehen must.</p>
             </article>
+    </main>
+    <section class="angebotLink">
+            <a href="impressum.html" id="zurKarte">zur Karte</a>
+            <a href="impressum.html" id="zumKalender">zum Kalender</a>
+    
+    </section>
+    <main>
+        <h3 id="weird">«Egau, wie weird du besch, do dosse gets no öpper wo genauso tickt.»</h3>
+        <article class="paragraph">
+            <p class="paragraphTitel">Möchtest du einen eigenen Event organisieren?</p>
+            <p class="paragraphText">Dann trage es einfach in deinen privaten Kalender ein und stelle die
+                Veranstaltung auf öffentlich.</p>
+            <p class="paragraphText">Zeige deinen Matches, was du als Gastgeber:in draufhast. </p>
+        </article>
+        <img src="../Images/Angebot/iPhone Beerpong.png"
+            alt="Bild mit zwei iPhones worauf gerade eine Beerpong Party abgemacht wird">
+        <h3 id="verein">«e Verein fäggt, imfau!»</h3>
+        <article class="paragraph">
+            <p class="paragraphTitel">Entdecke deinen Verein.</p>
+            <p class="paragraphText">Check auch unsere Liste mit Vereinen aus. Egal, ob du für etwas Neues brennst
+                oder einfach mal reinschnuppern willst: Hier wirst du fündig.</p>
+            <p class="paragraphText">Finde deine neue Lieblingsbeschäftigung und knüpfe Kontakte. Die nächste grosse
+                Leidenschaft wartet schon auf dich. </p>
 
-            <div class="angebotLink">
-                <a href="impressum.html" id="zurKarte">zur Karte</a>
-                <a href="impressum.html" id="zumKalender">zum Kalender</a>
-            </div>
 
-            <h3 id="weird">«Egau, wie weird du besch, do dosse gets no öpper wo genauso tickt.»</h3>
-            <article class="paragraph">
-                <p class="paragraphTitel">Möchtest du einen eigenen Event organisieren?</p>
-                <p class="paragraphText">Dann trage es einfach in deinen privaten Kalender ein und stelle die
-                    Veranstaltung auf öffentlich.</p>
-                <p class="paragraphText">Zeige deinen Matches, was du als Gastgeber:in draufhast. </p>
-            </article>
-            <img src="../Images/Angebot/iPhone Beerpong.png"
-                alt="Bild mit zwei iPhones worauf gerade eine Beerpong Party abgemacht wird" id="beerpong">
-            <h3 id="verein">«e Verein fäggt, imfau!»</h3>
-            <article class="paragraph">
-                <p class="paragraphTitel">Entdecke deinen Verein.</p>
-                <p class="paragraphText">Check auch unsere Liste mit Vereinen aus. Egal, ob du für etwas Neues brennst
-                    oder einfach mal reinschnuppern willst: Hier wirst du fündig.</p>
-                <p class="paragraphText">Finde deine neue Lieblingsbeschäftigung und knüpfe Kontakte. Die nächste grosse
-                    Leidenschaft wartet schon auf dich. </p>
+        </article>
+        <a href="home.html" class="button">alle Vereine</a>
 
+        <img src="../Images/Home/15_Bild.png" alt="Symbolbild Basketball" class="roundImage">
 
-            </article>
-            <a href="home.html" class="button">alle Vereine</a>
-
-            <img src="../Images/Home/15_Bild.png" alt="Symbolbild Basketball" class="roundImage">
-
-            <a class="button" id="impressum"> Impressum </a>
+        <a class="button" id="impressum"> Impressum </a>
         </section>
     </main>
-    <footer>
-        <section class="footerTextContainer" id="footerColumn1">
-            <p class="footerTitel">BÄRNLÄBT GmbH</p>
-            <p class="footerText">Holzikofenweg 8</p>
-            <p class="footerText">3000 Bern</p>
-            <p></p>
-            <p class="footerTitel">Kontakt</p>
-            <p class="footerText">info@baernlaebt.ch</p>
-            <p class="footerText">+41 31 333 31 01</p>
-
-        </section>
-        <section class="footerTextContainer" id="footerColumn2">
-            <p class="footerTitel">Öffnungszeiten</p>
-            <p class="footerText">Mo-Do:</p>
-            <p class="footerText">8:00 bis 11:45 Uhr</p>
-            <p class="footerText">13:00 bis 17:00 Uhr</p>
-            <p class="footerText">Fr: bis 16:00 Uhr</p>
-        </section>
-        <section class="footerTextContainer" id="footerColumn3">
-            <a href="home.html" class="footerText">Home</a>
-            <a href="angebot.html" class="footerText">Angebot</a>
-            <a href="über uns.html" class="footerText">Über uns</a>
-            <a href="kontakt.html" class="footerText">Kontakt</a>
-            <a href="impressum.html" class="footerText">Impressum</a>
-
-        </section>
-
-        <section class="footerSoMeContainer " id="footerColumn4">
-            <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
-
-        </section>
-
-    </footer>
-    <div class="footerLogoContainer">
-        <img src="../Images/Logo klein.png" alt="Logo BÄRNLÄBT" class="footerLogo">
-    </div>
-
-
 
 </body>
 
