--- a/html/home.html
+++ b/html/home.html
@@ -32,6 +32,7 @@
 
             <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
         </header>
+        <main>
         <section>
             <Article class="teaser">
                 <img src="../Images/home/01_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander"
@@ -45,9 +46,9 @@
                 </div>
             </article>
 
-            <article class="teaser">
+            <article class="teaser reverse">
              
-                    <div class="teaserBoxLinks">
+                    <div class="teaserBoxLinks" >
                         <h2 class="teaserTextLinks">Event finde</h2>
                         <p class="teaserTextLinks">BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der
                             Stadt Bern zu suchen.
@@ -59,7 +60,7 @@
             
             </article>
 
-            <h3>z'zwoite machts eifach meh Spass</h3>
+            <h3 id="spass">z'zwoite machts eifach meh Spass</h3>
 
             <article class="teaser">
                 <Img src="../Images/Home/Smartphone mit Köpfen_Bärnläbt.png" class="largeimage">
@@ -76,7 +77,7 @@
                 </div>
             </article>
 
-            <article class="teaser">
+            <article class="teaser reverse">
                     <div class="teaserBoxLinks">
                         <h2 class="teaserTextLinks">Hobby sueche</h2>
                         <p class="teaserTextLinks">Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden un
@@ -148,6 +149,12 @@
                     </p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit November 2023</p>
             </article>
+            <article class="userRezension" id="rezensionTobias">
+                <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <p class="nameRezensionen">Tobias, 21</p>
+                <p class="textRezensionen">«BÄRNLÄBT hilft mir, mein soziales Umfeld in Bern zu erweitern. Die Möglichkeit Veranstaltungen zu finden und sich mit anderen zu verbinden, ist einzigartig»</p>
+                <p class="datumRezensionen">bei BÄRNLÄBT seit Juni 2023</p>
+            </article>
             <article class="userRezension">
                 <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Leah, 23</p>
@@ -155,14 +162,9 @@
                     </p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit August 2023</p>
             </article>
-            <article class="userRezension" id="rezensionTobias">
-                <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
-                <p class="nameRezensionen">Tobias, 21</p>
-                <p class="textRezensionen">«BÄRNLÄBT hilft mir, mein soziales Umfeld in Bern zu erweitern. Die Möglichkeit Veranstaltungen zu finden und sich mit anderen zu verbinden, ist einzigartig»</p>
-                <p class="datumRezensionen">bei BÄRNLÄBT seit Juni 2023</p>
-            </article>
-        </section>
 
+        </section>
+    </main>
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
