--- a/html/ueberuns.html
+++ b/html/ueberuns.html
@@ -149,7 +149,7 @@
                 </div>
             </article>
             <article class="placeholder"></article>
-                <article>
+                <article class="visionBox">
                     <div class="vision">
                         <p>Unsere Vision ist es, die soziale Kultur in Bern zu stärken, in- dem wir Menschen
                             zusammenführen und die Leidenschaft für gemeinsame Veranstaltungen entfachen.
@@ -158,31 +158,25 @@
                     </div>
                 </article>
 
-                <article>
-                    <div>
                         <h2>Wöus zäme meh fäggt!</h2>
-                    </div>
-                </article>
+
             </section>
 
             <section>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/hG9g4eGjbts?si=OhV_h_0a1QkQMNUw"
+                <iframe class="video" src="https://www.youtube.com/embed/hG9g4eGjbts?si=OhV_h_0a1QkQMNUw"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </section>
 
             <section>
-                <article>
-                    <div>
+
                         <p>Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein Feedback mitteilen?
 
                             Dann nutze gerne unser Kontaktformular und wir werden uns so schnell wie möglich bei dir
                             melden.
 
                             Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine Kontaktaufnahme!</p>
-                    </div>
-                </article>
             </section>
     </main>
 
