working on Button and image responsiveness.

--- a/html/home.html
+++ b/html/home.html
@@ -24,10 +24,10 @@
             <h1>wöus zäme meh fäggt! </h1>
 
             <section class="menu-container">
-                <a href="home.html" class="button" id="buttonActive">Home</a>
-                <a href="angebot.html" class="button">Angebot</a>
-                <a href="ueberuns.html" class="button">Über uns</a>
-                <a href="kontakt.html" class="button">Kontakt</a>
+                <a href="home.html" class="button menu" id="buttonActive">Home</a>
+                <a href="angebot.html" class="button menu">Angebot</a>
+                <a href="ueberuns.html" class="button menu">Über uns</a>
+                <a href="kontakt.html" class="button menu">Kontakt</a>
             </section>
 
             <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
