--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -103,7 +103,7 @@
 
         <img src="../Images/Home/15_Bild.png" alt="Symbolbild Basketball" class="roundImage">
 
-        <a class="button" id="impressum"> Impressum </a>
+        <a class="button" id="impressum" href="impressum.html"> Impressum </a>
         </section>
     </main>
 
