--- a/html/Kontakt.html
+++ b/html/Kontakt.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/main.css">
-    <link rel="stylesheet" href="../https://use.typekit.net/qvo7bqu.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="../CSS/kontakt.css">
 </head>
+
 <body>
-    
+    <header>
+        <section class="toolbar">
+            <div class="toolbarLeft">
+                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons">
+            </div>
+            <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            </div>
+        </section>
+
+        <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
+
+        <section class="menu-container">
+            <a href="home.html" class="button">Home</a>
+            <a href="angebot.html" class="button" id="buttonActive">Angebot</a>
+            <a href="ueberuns.html" class="button">Über uns</a>
+            <a href="kontakt.html" class="button">Kontakt</a>
+        </section>
+
+    </header>
+    <img src="Logo" alt="Karte Bern mit Illustrationen" class="bildKontakt">
+    <main>
+        <div class="kontaktUeberschriftContainer">
+            <h3 id="haeufe"> Mer häufed gärn! </h3>
+            <div class="kontaktDatenContainer">
+                <p class="kontaktDaten">infos@baernlaebt.ch</p>
+                <p class="kontaktDaten"> +41 31 123 45 67</p>
+            </div>
+        </div>
+
+        <div class="kontaktFormularContainer">
+            <form action="kontakt.html" class="kontaktFormular">
+                <textarea id="nachricht" name="nachricht" placeholder="Was interessiert dich schon lange?" required></textarea>
+                <input type="text" id="name" placeholder="Name" required>
+
+                <input type="email" id="email" name="email" placeholder="E-Mail" required>
+
+                <input type="submit" value="Absenden" id="absenden">
+            </form>
+        </div>
+
+
+
+        </div>
+        <a class="button" id="impressum" href="impressum.html"> Impressum </a>
+        </div>
+    </main>
+
 </body>
+
 </html>
