--- a/html/Kontakt.html
+++ b/html/Kontakt.html
@@ -59,7 +59,44 @@
         <a class="button" id="impressum" href="impressum.html"> Impressum </a>
         </div>
     </main>
+    <footer>
+        <section class="footerTextContainer" id="footerColumn1">
+            <p class="footerTitel">BÄRNLÄBT GmbH</p>
+            <p class="footerText">Holzikofenweg 8</p>
+            <p class="footerText">3000 Bern</p>
+            <p></p>
+            <p class="footerTitel">Kontakt</p>
+            <p class="footerText">info@baernlaebt.ch</p>
+            <p class="footerText">+41 31 333 31 01</p>
 
+        </section>
+
+        <section class="footerTextContainer" id="footerColumn2">
+            <p class="footerTitel">Öffnungszeiten</p>
+            <p class="footerText">Mo-Do:</p>
+            <p class="footerText">8:00 bis 11:45 Uhr</p>
+            <p class="footerText">13:00 bis 17:00 Uhr</p>
+            <p class="footerText">Fr: bis 16:00 Uhr</p>
+        </section>
+
+        <section class="footerTextContainer" id="footerColumn3">
+            <a href="home.html" class="footerText">Home</a>
+            <a href="angebot.html" class="footerText">Angebot</a>
+            <a href="über uns.html" class="footerText">Über uns</a>
+            <a href="kontakt.html" class="footerText">Kontakt</a>
+            <a href="impressum.html" class="footerText">Impressum</a>
+
+        </section>
+
+        <section class="footerSoMeContainer " id="footerColumn4">
+            <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
+            <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
+            <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
+            <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+
+        </section>
+
+    </footer>
 </body>
 
 </html>
