css "about us" further edited (hover, text structure) and missing text in html added.

--- a/html/ueberuns.html
+++ b/html/ueberuns.html
@@ -59,9 +59,9 @@
                 <img src="../Images/ueberuns/Janic.png" alt="Portrait Janic" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
-                        <h2>Janic</h2>
-                        <p>Operations/ Kundendienst/ externe Kommunikation</p>
-                        <p>«Excel und PowerPoint Fanboy aber sonst eigentlich ganz okay.»</p>
+                        <h2 class="portraitTitle">Janic</h2>
+                        <p class="portraitFunction">Operations/ Kundendienst/ externe Kommunikation</p>
+                        <p class="portraitDescription">«Excel und PowerPoint Fanboy aber sonst eigentlich ganz okay.»</p>
                     </div>
                 </div>
             </article>
@@ -170,13 +170,29 @@
             </section>
 
             <section>
+                    <article class="kontaktTextBox">
+                    <div class="kontaktText">
+                        <p class="paragraphText">Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein Feedback mitteilen?</p> 
+                        <p class="paragraphText"> Dann nutze gerne unser Kontaktformular und wir werden uns so schnell wie möglich bei dir
+                            melden. </p> 
+                        <p class="paragraphText"> Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine Kontaktaufnahme!</p>
+                    </div>
+                </article>
+            </section>
 
-                        <p>Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein Feedback mitteilen?
+            <section>
+                <article>
+                    <div>
+                        <p>BÄRNLÄBT 
+                            Holzikofenweg 8 
+                            3000 Bern
+                            
+                            info@baernlaebt.ch 
+                            +41 31 333 31 01
+                        </p>
+                    </div>
+                </article>
 
-                            Dann nutze gerne unser Kontaktformular und wir werden uns so schnell wie möglich bei dir
-                            melden.
-
-                            Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine Kontaktaufnahme!</p>
             </section>
     </main>
 
