Fixed Video Size and started making Impressum responsive.

--- a/html/Kontakt.html
+++ b/html/Kontakt.html
@@ -26,9 +26,9 @@
 
         <section class="menu-container">
             <a href="home.html" class="button">Home</a>
-            <a href="angebot.html" class="button" id="buttonActive">Angebot</a>
-            <a href="ueberuns.html" class="button">Über uns</a>
-            <a href="kontakt.html" class="button">Kontakt</a>
+            <a href="angebot.html" class="button" >Angebot</a>
+            <a href="ueberuns.html" class="button" >Über uns</a>
+            <a href="kontakt.html" class="button" id="buttonActive">Kontakt</a>
         </section>
 
     </header>
