deleted some useless files

--- a/html/impressum.html
+++ b/html/impressum.html
@@ -35,11 +35,11 @@
     </header>
     <div class="flexbox">
         <h1 class="pageTitle">Impressum</h1>
-        <section id="container">
-            <h2>Kontaktadresse</h2>
-            <p>BÄRNLÄBT GmbH, Holzikofenweg 8, 3000 Bern, Schweiz</p>
-            <h2>Haftungsausschluss</h2>
-            <p>Der Autor übernimmt keinerlei Gewähr hinsichtlich der inhaltlichen Richtigkeit, Genauigkeit, Aktualität,
+        <section class="impressumContainer">
+            <h2 class="impressumText">Kontaktadresse</h2>
+            <p class="impressumText">BÄRNLÄBT GmbH, Holzikofenweg 8, 3000 Bern, Schweiz</p>
+            <h2 class="impressumText">Haftungsausschluss</h2>
+            <p class="impressumText">Der Autor übernimmt keinerlei Gewähr hinsichtlich der inhaltlichen Richtigkeit, Genauigkeit, Aktualität,
                 Zuverlässigkeit und Vollständigkeit der Informationen. Haftungsansprüche gegen den Autor wegen Schäden
                 materieller oder immaterieller Art, welche aus dem Zugriff oder der Nutzung bzw. Nichtnutzung der
                 veröffentlichten Informationen, durch Missbrauch der Verbindung oder durch technische Störungen
@@ -53,13 +53,13 @@
                 Webseiten Dritter liegen ausserhalb unseres Verantwortungsbereichs. Es wird jegliche Verantwortung für
                 solche Webseiten abgelehnt. Der Zugriff und die Nutzung solcher Webseiten erfolgen auf eigene Gefahr des
                 Nutzers oder der Nutzerin.</p>
-            <h2>Urheberrechte</h2>
-            <p>Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf der Website
+            <h2 class="impressumText">Urheberrechte</h2>
+            <p class="impressumText">Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf der Website
                 gehören
                 ausschliesslich der Firma BÄRNLÄBT GmbH oder den speziell genannten Rechtsinhabern. Für die Reproduktion
                 jeglicher Elemente ist die schriftliche Zustimmung der Urheberrechtsträger im Voraus einzuholen.</p>
-            <h2>Datenschutz</h2>
-            <p>Gestützt auf Artikel 13 der schweizerischen Bundesverfassung und die datenschutzrechtlichen Bestimmungen
+            <h2 class="impressumText">Datenschutz</h2>
+            <p class="impressumText">Gestützt auf Artikel 13 der schweizerischen Bundesverfassung und die datenschutzrechtlichen Bestimmungen
                 des
                 Bundes (Datenschutzgesetz, DSG) hat jede Person Anspruch auf Schutz ihrer Privatsphäre sowie auf Schutz
                 vor
